Quick dark mode icons fix

--- a/duck/imports/ui/stylesheets/TorrentsDuck.less
+++ b/duck/imports/ui/stylesheets/TorrentsDuck.less
@@ -42,7 +42,8 @@
 	background-color: #1b1c1d !important;
 }
 .inverted input,
-.inverted .dropdown {
+.inverted .dropdown,
+.ui.icon.input.inverted {
 	background-color: #1b1c1d !important;
 	color: rgba(255, 255, 255, 0.87) !important;
 }
